--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,8 @@
 body {
-    background-image: url("got.jpg");
+    background-image: url("images/got.jpg");
     height: 100%;
     width: 100%;
-    background-size:100%;
+    background-size:;
 }
 header {
     margin-top: 20px;
@@ -15,8 +15,6 @@ header {
     margin-top: 30px;
     margin-left: 30%;
 }
-#quiz {
-    
-}
 #results-page {
+    margin-left: 30%;
 }
